version/0.1/_sources/examples/index.rst.txt
:orphan:

Examples
========
These examples show you how you can use the preprocessor and simulator modules
to preprocess, consume and run heart models. Examples include electrophysiology and mechanics.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Postprocessor examples
======================
These examples show you how you can use the postprocessor module
to handle simulation data generated by LS-DYNA.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Post process EP simulation">

.. only:: html

  .. image:: /examples/postprocessor/images/thumb/sphx_glr_doc_postproc_ep_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_postprocessor_doc_postproc_ep_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Post process EP simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Post process Zero pressure folder">

.. only:: html

  .. image:: /examples/postprocessor/images/thumb/sphx_glr_doc_autopost_zerop_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_postprocessor_doc_autopost_zerop_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Post process Zero pressure folder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Post process mechanical simulation folder">

.. only:: html

  .. image:: /examples/postprocessor/images/thumb/sphx_glr_doc_autopost_mechanical_simulation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_postprocessor_doc_autopost_mechanical_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Post process mechanical simulation folder</div>
    </div>


.. raw:: html

    </div>

Preprocessor examples
=====================
These examples show you how you can use the preprocessor module
to generate different kinds of heart models. For instance, a
biventricular, four chamber, or full heart model.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="UHC example">

.. only:: html

  .. image:: /examples/preprocessor/images/thumb/sphx_glr_doc_example_uhc_thumb.png
    :alt:

  :ref:`sphx_glr_examples_preprocessor_doc_example_uhc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">UHC example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Atrial fiber">

.. only:: html

  .. image:: /examples/preprocessor/images/thumb/sphx_glr_doc_example_atrial_fiber_thumb.png
    :alt:

  :ref:`sphx_glr_examples_preprocessor_doc_example_atrial_fiber.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Atrial fiber</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a full heart model">

.. only:: html

  .. image:: /examples/preprocessor/images/thumb/sphx_glr_doc_preprocess_fullheart_rodero_01_thumb.png
    :alt:

  :ref:`sphx_glr_examples_preprocessor_doc_preprocess_fullheart_rodero_01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a full heart model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a four chamber heart model">

.. only:: html

  .. image:: /examples/preprocessor/images/thumb/sphx_glr_doc_preprocess_fourchamber_thumb.png
    :alt:

  :ref:`sphx_glr_examples_preprocessor_doc_preprocess_fourchamber.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a four chamber heart model</div>
    </div>


.. raw:: html

    </div>

Simulator examples
==================
These examples show you how you can use the simulator module
to consume preprocessed models and consequently use these to run various
simulations.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Full-heart mechanics">

.. only:: html

  .. image:: /examples/simulator/images/thumb/sphx_glr_doc_mechanics_simulator_fullheart_rodero_01_thumb.png
    :alt:

  :ref:`sphx_glr_examples_simulator_doc_mechanics_simulator_fullheart_rodero_01.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Full-heart mechanics</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Full-heart EP-simulator example">

.. only:: html

  .. image:: /examples/simulator/images/thumb/sphx_glr_doc_EP_simulator_FullHeart_rodero_thumb.png
    :alt:

  :ref:`sphx_glr_examples_simulator_doc_EP_simulator_FullHeart_rodero.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Full-heart EP-simulator example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Four-chamber EP-simulator example">

.. only:: html

  .. image:: /examples/simulator/images/thumb/sphx_glr_doc_EP_simulator_fourchamber_thumb.png
    :alt:

  :ref:`sphx_glr_examples_simulator_doc_EP_simulator_fourchamber.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Four-chamber EP-simulator example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Full heart EP-mechanics">

.. only:: html

  .. image:: /examples/simulator/images/thumb/sphx_glr_doc_EP-mechanics_simulator_fullheart_rodero_thumb.png
    :alt:

  :ref:`sphx_glr_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Full heart EP-mechanics</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/postprocessor/index.rst
   /examples/preprocessor/index.rst
   /examples/simulator/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: examples_python.zip </examples/examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: examples_jupyter.zip </examples/examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
